Add onboarding, privacy policy screens, and data safety docs

--- a/mobile/src/main/res/values-en/strings.xml
+++ b/mobile/src/main/res/values-en/strings.xml
@@ -1,55 +1,23 @@
 <resources>
-    <string name="app_name">Point-to-Sky Mobile</string>
-    <string name="open_card">Open card</string>
-    <string name="card_title">Card</string>
-    <string name="card_error_not_enough_data">Not enough data</string>
-    <string name="card_constellation_label">Constellation</string>
-    <string name="card_magnitude_label">Magnitude</string>
-    <string name="card_alt_az_label">Alt / Az</string>
-    <string name="card_ra_dec_label">RA / Dec</string>
-    <string name="card_best_window_label">Best window</string>
-    <string name="card_set_target_button">Set as target on watch</string>
-    <string name="card_share_button">Share</string>
-    <string name="card_type_star">Star</string>
-    <string name="card_type_planet">Planet</string>
-    <string name="card_type_moon">Moon</string>
-    <string name="card_type_constellation">Constellation</string>
-    <string name="card_share_chooser_title">Share object</string>
-    <string name="card_share_error">No compatible apps found</string>
-    <string name="open_aim_on_watch">Open Aim on watch</string>
-    <string name="open_identify_on_watch">Open Identify on watch</string>
-    <string name="use_phone_compass_on">Use phone compass (on)</string>
-    <string name="use_phone_compass_off">Use phone compass (off)</string>
-    <string name="phone_compass_not_available">Phone compass sensor is not available</string>
-    <string name="location_settings">Location</string>
-    <string name="sky_map">Sky map</string>
-    <string name="sky_map_title">Sky map</string>
-    <string name="sky_map_timestamp">Time: %1$s</string>
-    <string name="sky_map_location_label">Coords: %1$s • %2$s</string>
-    <string name="sky_map_location_manual">Manual override</string>
-    <string name="sky_map_location_default">Location unavailable</string>
-    <string name="sky_map_unnamed_star">Unnamed star</string>
-    <string name="sky_map_constellation">Constellation: %1$s</string>
-    <string name="sky_map_magnitude">Magnitude: %1$.1f</string>
-    <string name="sky_map_alt_az">Alt: %1$s°, Az: %2$s°</string>
-    <string name="location_setup_title">Location setup</string>
-    <string name="location_setup_description">We use your position to calculate the visible sky and suggest objects.</string>
-    <string name="location_setup_request_permission">Allow location</string>
-    <string name="location_setup_open_settings">Open settings</string>
-    <string name="location_setup_permission_granted">Location permission is already granted.</string>
-    <string name="location_setup_manual_toggle">Use manual coordinates</string>
-    <string name="location_setup_manual_hint">Enter coordinates in decimal degrees, e.g. 40.7128 / -74.0060</string>
-    <string name="location_setup_lat_label">Latitude</string>
-    <string name="location_setup_lat_hint">Example: 40.7128</string>
-    <string name="location_setup_lat_error_format">Enter latitude in decimal degrees.</string>
-    <string name="location_setup_lat_error_range">Latitude must be between -90 and 90.</string>
-    <string name="location_setup_lon_label">Longitude</string>
-    <string name="location_setup_lon_hint">Example: -74.0060</string>
-    <string name="location_setup_lon_error_format">Enter longitude in decimal degrees.</string>
-    <string name="location_setup_lon_error_range">Longitude must be between -180 and 180.</string>
-    <string name="location_setup_save">Save coordinates</string>
-    <string name="location_setup_saved_toast">Coordinates saved</string>
-    <string name="time_debug">Time debug</string>
-    <string name="time_debug_toggle">1 Hz / 0.2 Hz</string>
-    <string name="time_debug_back">Back</string>
+    <string name="settings_policy_link">Privacy &amp; disclaimer</string>
+    <string name="onboarding_title">Safety</string>
+    <string name="onboarding_description">Point-to-Sky provides astronomy guidance only and must not be used for navigation.</string>
+    <string name="onboarding_checkbox">I understand this app is not for navigation.</string>
+    <string name="onboarding_location_label">Location</string>
+    <string name="onboarding_location_granted">Location permission is already granted.</string>
+    <string name="onboarding_location_button">Allow location while in use</string>
+    <string name="onboarding_location_denied">We use your approximate location to suggest visible objects near you.</string>
+    <string name="onboarding_camera_label">Camera</string>
+    <string name="onboarding_camera_granted">Camera permission is already granted.</string>
+    <string name="onboarding_camera_button">Allow camera</string>
+    <string name="onboarding_camera_denied">The camera feed stays on device and is used only for the AR overlay.</string>
+    <string name="onboarding_continue">Continue</string>
+    <string name="policy_screen_title">Privacy &amp; disclaimer</string>
+    <string name="policy_screen_description">We process sensor data locally. Review the privacy policy and disclaimer for details.</string>
+    <string name="policy_screen_privacy">Privacy policy</string>
+    <string name="policy_screen_privacy_summary">Explains what data we use and how it stays on your device.</string>
+    <string name="policy_screen_disclaimer">Disclaimer</string>
+    <string name="policy_screen_disclaimer_summary">Reminder that Point-to-Sky must not be used for navigation.</string>
+    <string name="policy_document_privacy_title">Privacy policy</string>
+    <string name="policy_document_disclaimer_title">Disclaimer</string>
 </resources>
