--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -118,12 +118,30 @@
     <string name="settings_permission_not_granted">Разрешение не выдано</string>
     <string name="settings_permission_request">Запросить</string>
     <string name="settings_disclaimer">Не использовать для навигации.</string>
-    <string name="settings_policy_link">Политика конфиденциальности</string>
-    <string name="settings_policy_url">https://pointtosky.dev/privacy</string>
+    <string name="settings_policy_link">Политика и дисклеймер</string>
     <string name="settings_button">Настройки</string>
     <string name="settings_mirror_preview">Tonight Preview</string>
-    <string name="settings_policy_open_error">Не удалось открыть ссылку</string>
     <string name="settings_mirror_preview_error">Предпросмотр недоступен</string>
     <string name="settings_redact_payloads_blocked">Sending raw payloads is disabled by privacy settings</string>
     <string name="settings_ar_disabled_toast">Включите AR в настройках телефона</string>
+    <string name="onboarding_title">Безопасность</string>
+    <string name="onboarding_description">Point-to-Sky показывает астрономические подсказки, но не заменяет приборы навигации.</string>
+    <string name="onboarding_checkbox">Я понимаю, что приложение не для навигации.</string>
+    <string name="onboarding_location_label">Локация</string>
+    <string name="onboarding_location_granted">Разрешение на локацию уже выдано.</string>
+    <string name="onboarding_location_button">Разрешить локацию во время использования</string>
+    <string name="onboarding_location_denied">Разрешение нужно, чтобы подобрать видимые объекты рядом с вами.</string>
+    <string name="onboarding_camera_label">Камера</string>
+    <string name="onboarding_camera_granted">Разрешение на камеру уже выдано.</string>
+    <string name="onboarding_camera_button">Разрешить камеру</string>
+    <string name="onboarding_camera_denied">Камера используется только для AR-оверлея и не покидает устройство.</string>
+    <string name="onboarding_continue">Продолжить</string>
+    <string name="policy_screen_title">Политика и дисклеймер</string>
+    <string name="policy_screen_description">Мы обрабатываем данные датчиков локально. Посмотрите детали политики и дисклеймера.</string>
+    <string name="policy_screen_privacy">Политика конфиденциальности</string>
+    <string name="policy_screen_privacy_summary">Описывает, какие данные используются и как они остаются на устройстве.</string>
+    <string name="policy_screen_disclaimer">Дисклеймер</string>
+    <string name="policy_screen_disclaimer_summary">Напоминание, что Point-to-Sky не предназначен для навигации.</string>
+    <string name="policy_document_privacy_title">Политика конфиденциальности</string>
+    <string name="policy_document_disclaimer_title">Дисклеймер</string>
 </resources>
