feat: add ru/en resources and locale-aware formatting

--- a/wear/src/main/res/values-ru/strings.xml
+++ b/wear/src/main/res/values-ru/strings.xml
@@ -1,10 +1,160 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Tonight Tile (RU) -->
+    <string name="app_name">Point-to-Sky Wear</string>
+    <string name="find_label">Найти</string>
+    <string name="identify_label">Что там?</string>
+    <string name="identify_low_accuracy">Низкая точность</string>
+    <string name="sensors_debug_label">Датчики</string>
+    <string name="sensors_debug_title">Датчики</string>
+    <string name="sensors_calibrate_label">Калибровка</string>
+    <string name="sensors_calibrate_title">Калибровка</string>
+    <string name="set_zero_label">Установить ноль</string>
+    <string name="reset_zero_label">Сбросить</string>
+    <string name="current_azimuth_label">Азимут: %1$.1f°</string>
+    <string name="current_azimuth_unknown_label">Азимут: —</string>
+    <string name="current_pitch_label">Тангаж: %1$.1f°</string>
+    <string name="current_roll_label">Крен: %1$.1f°</string>
+    <string name="current_accuracy_label">Точность: %1$s</string>
+    <string name="zero_offset_label">Смещение нуля: %1$.1f°</string>
+    <string name="screen_rotation_label">Поворот экрана</string>
+    <string name="screen_rotation_option">Поворот %1$d°</string>
+    <string name="sensors_calibrate_hint">Держите часы в нужном направлении и нажмите «Установить ноль».</string>
+    <string name="value_not_available">—</string>
+    <string name="orientation_accuracy_unreliable">Ненадёжно</string>
+    <string name="orientation_accuracy_low">Низкая</string>
+    <string name="orientation_accuracy_medium">Средняя</string>
+    <string name="orientation_accuracy_high">Высокая</string>
+    <string name="current_fps_prefix">FPS: %1$s</string>
+    <string name="current_fps_label">%1$.1f</string>
+    <string name="current_source_label">Источник: %1$s</string>
+    <string name="source_rotation_vector">Rotation Vector</string>
+    <string name="source_accel_mag">Accel+Mag</string>
+    <string name="source_phone">Phone</string>
+    <string name="accuracy_hint_figure_eight">Сделайте восьмёрку для калибровки магнитометра.</string>
+    <string name="frame_trace_label">Frame trace</string>
+    <string name="frame_trace_off">OFF</string>
+    <string name="frame_trace_summary">1 Hz summary</string>
+    <string name="frame_trace_full">15 Hz full</string>
+    <string name="writer_stats_label">Writer queued: %1$d dropped: %2$d</string>
+    <string name="sensor_status_active">Сенсор активен</string>
+    <string name="sensor_status_inactive">Сенсор выключен</string>
+    <string name="sensor_status_icon_active">Иконка активного сенсора</string>
+    <string name="sensor_status_icon_inactive">Иконка неактивного сенсора</string>
+    <string name="location_settings">Локация</string>
+    <string name="location_setup_title">Настройка локации</string>
+    <string name="location_setup_description">Локация нужна для расчёта видимой части неба.</string>
+    <string name="location_setup_request_permission">Разрешить локацию</string>
+    <string name="location_setup_open_settings">Открыть настройки</string>
+    <string name="location_setup_permission_granted">Разрешение на геолокацию уже выдано.</string>
+    <string name="location_setup_manual_toggle">Ввести координаты вручную</string>
+    <string name="location_setup_manual_hint">Широта и долгота в десятичных градусах, например 55.7558 / 37.6176</string>
+    <string name="location_setup_lat_label">Широта</string>
+    <string name="location_setup_lat_hint">Например: 55.7558</string>
+    <string name="location_setup_lat_error_format">Введите широту в формате десятичных градусов.</string>
+    <string name="location_setup_lat_error_range">Широта должна быть в диапазоне от -90 до 90.</string>
+    <string name="location_setup_lon_label">Долгота</string>
+    <string name="location_setup_lon_hint">Например: 37.6176</string>
+    <string name="location_setup_lon_error_format">Введите долготу в формате десятичных градусов.</string>
+    <string name="location_setup_lon_error_range">Долгота должна быть в диапазоне от -180 до 180.</string>
+    <string name="location_setup_save">Сохранить координаты</string>
+    <string name="location_setup_saved_toast">Координаты сохранены</string>
+    <string name="location_setup_use_phone_fallback">Использовать локацию телефона</string>
+    <string name="location_phone_source_label">Источник: %1$s</string>
+    <string name="location_phone_source_phone">PHONE</string>
+    <string name="location_phone_source_unknown">—</string>
+    <string name="time_debug_label">Время</string>
+    <string name="time_debug_toggle">1 Гц / 0.2 Гц</string>
+    <string name="crash_logs_button">Логи сбоев</string>
+    <string name="crash_logs_title">Логи сбоев</string>
+    <string name="crash_logs_instruction">Для ANR/Crash смотри Play Console → Play Vitals. Здесь — локальные JSONL-логи.</string>
+    <string name="crash_logs_message_dismiss">Скрыть сообщение</string>
+    <string name="crash_logs_zip_path">ZIP: %1$s</string>
+    <string name="crash_logs_last_crash">Последний сбой</string>
+    <string name="crash_logs_last_crash_time">Время: %1$s</string>
+    <string name="crash_logs_last_crash_thread">Поток: %1$s (#%2$d)</string>
+    <string name="crash_logs_last_crash_type">Тип: %1$s</string>
+    <string name="crash_logs_last_crash_message">Сообщение: %1$s</string>
+    <string name="crash_logs_stacktrace_label">Стек:</string>
+    <string name="crash_logs_empty">Сбоев не зафиксировано.</string>
+    <string name="crash_logs_create_zip">Создать ZIP</string>
+    <string name="crash_logs_clear">Очистить</string>
+    <string name="crash_logs_back">Назад</string>
+    <string name="crash_logs_zip_ready">ZIP сохранён: %1$s</string>
+    <string name="crash_logs_zip_unavailable">Нет логов для экспорта.</string>
+    <string name="crash_logs_cleared">Логи очищены.</string>
+    <string name="crash_logs_operation_failed">Не удалось выполнить операцию.</string>
+    <string name="catalog_debug_label">Catalog Debug</string>
+    <string name="catalog_debug_title">Catalog Debug</string>
+    <string name="catalog_debug_probe_header">Пробный запрос</string>
+    <string name="catalog_debug_probe_ra">RA (°)</string>
+    <string name="catalog_debug_probe_dec">Dec (°)</string>
+    <string name="catalog_debug_probe_radius">Радиус (°)</string>
+    <string name="catalog_debug_probe_mag">Предел звёздн. величины</string>
+    <string name="catalog_debug_probe_action">Найти</string>
+    <string name="catalog_debug_probe_results_title">Результаты</string>
+    <string name="catalog_debug_probe_timestamp">Обновлено: %1$s</string>
+    <string name="catalog_debug_self_test_action">Self-test</string>
+    <string name="catalog_debug_self_test_title">Диагностика</string>
+    <string name="catalog_debug_back">Назад</string>
+    <string name="time_debug_back">Назад</string>
+    <string name="astro_debug_label">Astro Debug</string>
+    <string name="astro_debug_title">Astro Debug</string>
+    <string name="astro_debug_lst_degrees">LST: %1$.2f°</string>
+    <string name="astro_debug_lst_unknown">LST: —</string>
+    <string name="astro_debug_lst_time">LST (часы): %1$s</string>
+    <string name="astro_debug_value_unknown">—</string>
+    <string name="astro_debug_horizontal">Az/Alt: %1$.1f° / %2$.1f°</string>
+    <string name="astro_debug_equatorial">RA/Dec: %1$.1f° / %2$.1f°</string>
+    <string name="astro_debug_best_match_object">Лучшее совпадение: %1$s (m=%2$s, созвездие=%3$s)</string>
+    <string name="astro_debug_best_match_constellation">Созвездие: %1$s</string>
+    <string name="astro_debug_best_match_unknown">Лучшее совпадение: —</string>
+    <string name="astro_debug_best_match_unknown_label">Без имени</string>
+    <string name="astro_debug_constellation_unknown">—</string>
+    <string name="astro_debug_target_summary">Цель: %1$s</string>
+    <string name="astro_debug_target_sun">Солнце</string>
+    <string name="astro_debug_target_moon">Луна</string>
+    <string name="astro_debug_target_jupiter">Юпитер</string>
+    <string name="astro_debug_target_saturn">Сатурн</string>
+    <string name="astro_debug_aim_error">Δaz=%1$.1f° Δalt=%2$.1f°</string>
+    <string name="astro_debug_aim_error_unknown">Δaz/Δalt: —</string>
+    <string name="a11y_lock_captured">Цель захвачена</string>
+    <string name="a11y_confidence">Достоверность %1$d%%</string>
+    <string name="a11y_right">вправо</string>
+    <string name="a11y_left">влево</string>
+    <string name="a11y_up">вверх</string>
+    <string name="a11y_down">вниз</string>
+    <string name="a11y_aim_arrow">Поверните %1$s. ΔAz %2$.1f°</string>
+    <string name="a11y_alt_scale">Двигайтесь %1$s. ΔAlt %2$.1f°</string>
+    <string name="a11y_open_card">Открыть карточку</string>
+    <string name="tonight_targets_loading">Загрузка…</string>
+    <string name="tonight_targets_empty">Нет доступных целей</string>
     <string name="tile_tonight_label">Сегодня ночью</string>
     <string name="tile_more">Ещё</string>
     <string name="tonight_targets_label">Список целей</string>
+    <string name="settings_label">Настройки</string>
+    <string name="settings_title">Настройки</string>
+    <string name="settings_back">Назад</string>
+    <string name="aim_az_tol_label">Допуск по азимуту: %1$.1f°</string>
+    <string name="aim_alt_tol_label">Допуск по высоте: %1$.1f°</string>
+    <string name="aim_hold_ms_label">Удерживать для захвата: %1$d мс</string>
+    <string name="aim_haptic_label">Виброотклик</string>
+    <string name="identify_radius_label">Радиус идентификации: %1$.1f°</string>
+    <string name="identify_mag_limit_label">Предел звёздн. величины: %1$.1f</string>
+    <string name="settings_tile_mirroring_title">Mirroring на телефон</string>
+    <string name="settings_tile_mirroring_desc">Отправлять предпросмотр тайла Tonight на телефон</string>
+    <string name="tile_section_title">Тайл</string>
+    <string name="tile_mag_limit_label">Звёзды: m ≤ %1$.1f</string>
+    <string name="tile_min_alt_label">Мин. высота: %1$.0f°</string>
+    <string name="tile_max_items_label">Макс. объектов: %1$d</string>
+    <string name="tile_prefer_planets_label">Предпочитать планеты</string>
+    <string name="tile_force_refresh">Принудительно обновить</string>
     <string name="tile_debug_last_generation">Последняя генерация: %1$s, %2$s</string>
     <string name="tile_debug_last_generation_unknown">Последняя генерация: —</string>
     <string name="tile_debug_target_unknown">—</string>
+    <string name="onboarding_title">Безопасность</string>
+    <string name="onboarding_description">Point-to-Sky показывает астрономические подсказки, но не заменяет приборы навигации.</string>
+    <string name="onboarding_checkbox">Я понимаю, что приложение не для навигации.</string>
+    <string name="onboarding_location_label">Локация</string>
+    <string name="onboarding_location_granted">Разрешение на локацию уже выдано.</string>
+    <string name="onboarding_location_button">Разрешить локацию во время использования</string>
+    <string name="onboarding_continue">Продолжить</string>
 </resources>
