--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,120 +1,121 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Point-to-Sky Wear</string>
-    <string name="find_label">Найти</string>
-    <string name="identify_label">Что там?</string>
+    <string name="find_label">Aim</string>
+    <string name="identify_label">Identify</string>
     <string name="identify_low_accuracy">Low accuracy</string>
-    <string name="sensors_debug_label">Датчики</string>
-    <string name="sensors_debug_title">Датчики</string>
-    <string name="sensors_calibrate_label">Калибровка</string>
-    <string name="sensors_calibrate_title">Калибровка</string>
-    <string name="set_zero_label">Установить ноль</string>
-    <string name="reset_zero_label">Сбросить</string>
-    <string name="current_azimuth_label">Азимут: %1$.1f°</string>
-    <string name="current_azimuth_unknown_label">Азимут: —</string>
-    <string name="current_pitch_label">Тангаж: %1$.1f°</string>
-    <string name="current_roll_label">Крен: %1$.1f°</string>
-    <string name="current_accuracy_label">Точность: %1$s</string>
-    <string name="zero_offset_label">Смещение нуля: %1$.1f°</string>
-    <string name="screen_rotation_label">Поворот экрана</string>
-    <string name="screen_rotation_option">Поворот %1$d°</string>
-    <string name="sensors_calibrate_hint">Держите часы в нужном направлении и нажмите «Установить ноль».</string>
+    <string name="sensors_debug_label">Sensors</string>
+    <string name="sensors_debug_title">Sensors</string>
+    <string name="sensors_calibrate_label">Calibration</string>
+    <string name="sensors_calibrate_title">Calibration</string>
+    <string name="set_zero_label">Set zero</string>
+    <string name="reset_zero_label">Reset</string>
+    <string name="current_azimuth_label">Azimuth: %1$.1f°</string>
+    <string name="current_azimuth_unknown_label">Azimuth: —</string>
+    <string name="current_pitch_label">Pitch: %1$.1f°</string>
+    <string name="current_roll_label">Roll: %1$.1f°</string>
+    <string name="current_accuracy_label">Accuracy: %1$s</string>
+    <string name="zero_offset_label">Zero offset: %1$.1f°</string>
+    <string name="screen_rotation_label">Screen rotation</string>
+    <string name="screen_rotation_option">Rotate %1$d°</string>
+    <string name="sensors_calibrate_hint">Hold the watch in position and tap “Set zero”.</string>
     <string name="value_not_available">—</string>
-    <string name="orientation_accuracy_unreliable">Ненадёжно</string>
-    <string name="orientation_accuracy_low">Низкая</string>
-    <string name="orientation_accuracy_medium">Средняя</string>
-    <string name="orientation_accuracy_high">Высокая</string>
+    <string name="orientation_accuracy_unreliable">Unreliable</string>
+    <string name="orientation_accuracy_low">Low</string>
+    <string name="orientation_accuracy_medium">Medium</string>
+    <string name="orientation_accuracy_high">High</string>
     <string name="current_fps_prefix">FPS: %1$s</string>
     <string name="current_fps_label">%1$.1f</string>
-    <string name="current_source_label">Источник: %1$s</string>
+    <string name="current_source_label">Source: %1$s</string>
     <string name="source_rotation_vector">Rotation Vector</string>
     <string name="source_accel_mag">Accel+Mag</string>
     <string name="source_phone">Phone</string>
-    <string name="accuracy_hint_figure_eight">Сделайте восьмёрку для калибровки магнитометра.</string>
+    <string name="accuracy_hint_figure_eight">Draw a figure eight to calibrate the magnetometer.</string>
     <string name="frame_trace_label">Frame trace</string>
     <string name="frame_trace_off">OFF</string>
     <string name="frame_trace_summary">1 Hz summary</string>
     <string name="frame_trace_full">15 Hz full</string>
     <string name="writer_stats_label">Writer queued: %1$d dropped: %2$d</string>
-    <string name="sensor_status_active">Сенсор активен</string>
-    <string name="sensor_status_inactive">Сенсор выключен</string>
-    <string name="sensor_status_icon_active">Иконка активного сенсора</string>
-    <string name="sensor_status_icon_inactive">Иконка неактивного сенсора</string>
-    <string name="location_settings">Локация</string>
-    <string name="location_setup_title">Настройка локации</string>
-    <string name="location_setup_description">Локация нужна для расчёта видимой части неба.</string>
-    <string name="location_setup_request_permission">Разрешить локацию</string>
-    <string name="location_setup_open_settings">Открыть настройки</string>
-    <string name="location_setup_permission_granted">Разрешение на геолокацию уже выдано.</string>
-    <string name="location_setup_manual_toggle">Ввести координаты вручную</string>
-    <string name="location_setup_manual_hint">Широта и долгота в десятичных градусах, например 55.7558 / 37.6176</string>
-    <string name="location_setup_lat_label">Широта</string>
-    <string name="location_setup_lat_hint">Например: 55.7558</string>
-    <string name="location_setup_lat_error_format">Введите широту в формате десятичных градусов.</string>
-    <string name="location_setup_lat_error_range">Широта должна быть в диапазоне от -90 до 90.</string>
-    <string name="location_setup_lon_label">Долгота</string>
-    <string name="location_setup_lon_hint">Например: 37.6176</string>
-    <string name="location_setup_lon_error_format">Введите долготу в формате десятичных градусов.</string>
-    <string name="location_setup_lon_error_range">Долгота должна быть в диапазоне от -180 до 180.</string>
-    <string name="location_setup_save">Сохранить координаты</string>
-    <string name="location_setup_saved_toast">Координаты сохранены</string>
-    <string name="location_setup_use_phone_fallback">Использовать локацию телефона</string>
-    <string name="location_phone_source_label">Источник: %1$s</string>
+    <string name="sensor_status_active">Sensor active</string>
+    <string name="sensor_status_inactive">Sensor inactive</string>
+    <string name="sensor_status_icon_active">Active sensor icon</string>
+    <string name="sensor_status_icon_inactive">Inactive sensor icon</string>
+    <string name="location_settings">Location</string>
+    <string name="location_setup_title">Location setup</string>
+    <string name="location_setup_description">Location is required to estimate the visible sky.</string>
+    <string name="location_setup_request_permission">Allow location</string>
+    <string name="location_setup_open_settings">Open settings</string>
+    <string name="location_setup_permission_granted">Location permission is already granted.</string>
+    <string name="location_setup_manual_toggle">Enter coordinates manually</string>
+    <string name="location_setup_manual_hint">Latitude and longitude in decimal degrees, e.g. 55.7558 / 37.6176</string>
+    <string name="location_setup_lat_label">Latitude</string>
+    <string name="location_setup_lat_hint">Example: 55.7558</string>
+    <string name="location_setup_lat_error_format">Enter latitude in decimal degrees.</string>
+    <string name="location_setup_lat_error_range">Latitude must be between -90 and 90.</string>
+    <string name="location_setup_lon_label">Longitude</string>
+    <string name="location_setup_lon_hint">Example: 37.6176</string>
+    <string name="location_setup_lon_error_format">Enter longitude in decimal degrees.</string>
+    <string name="location_setup_lon_error_range">Longitude must be between -180 and 180.</string>
+    <string name="location_setup_save">Save coordinates</string>
+    <string name="location_setup_saved_toast">Coordinates saved</string>
+    <string name="location_setup_use_phone_fallback">Use phone location</string>
+    <string name="location_phone_source_label">Source: %1$s</string>
     <string name="location_phone_source_phone">PHONE</string>
     <string name="location_phone_source_unknown">—</string>
     <!-- Tiles (S7.A) -->
-    <string name="time_debug_label">Время</string>
-    <string name="time_debug_toggle">1 Гц / 0.2 Гц</string>
+    <string name="time_debug_label">Time</string>
+    <string name="time_debug_toggle">1 Hz / 0.2 Hz</string>
     <string name="crash_logs_button">Crash logs</string>
     <string name="crash_logs_title">Crash logs</string>
-    <string name="crash_logs_instruction">Для ANR/Crash смотри Play Console → Play Vitals. Здесь — локальные JSONL логи.</string>
-    <string name="crash_logs_message_dismiss">Скрыть сообщение</string>
+    <string name="crash_logs_instruction">For ANR/Crash see Play Console → Play Vitals. Local JSONL logs are listed here.</string>
+    <string name="crash_logs_message_dismiss">Hide message</string>
     <string name="crash_logs_zip_path">ZIP: %1$s</string>
-    <string name="crash_logs_last_crash">Последний краш</string>
-    <string name="crash_logs_last_crash_time">Время: %1$s</string>
-    <string name="crash_logs_last_crash_thread">Поток: %1$s (#%2$d)</string>
-    <string name="crash_logs_last_crash_type">Тип: %1$s</string>
-    <string name="crash_logs_last_crash_message">Сообщение: %1$s</string>
-    <string name="crash_logs_stacktrace_label">Стек:</string>
-    <string name="crash_logs_empty">Краши не зафиксированы.</string>
-    <string name="crash_logs_create_zip">Создать ZIP</string>
-    <string name="crash_logs_clear">Очистить</string>
-    <string name="crash_logs_back">Назад</string>
-    <string name="crash_logs_zip_ready">ZIP сохранён: %1$s</string>
-    <string name="crash_logs_zip_unavailable">Нет логов для экспорта.</string>
-    <string name="crash_logs_cleared">Логи очищены.</string>
-    <string name="crash_logs_operation_failed">Не удалось выполнить операцию.</string>
+    <string name="crash_logs_last_crash">Last crash</string>
+    <string name="crash_logs_last_crash_time">Time: %1$s</string>
+    <string name="crash_logs_last_crash_thread">Thread: %1$s (#%2$d)</string>
+    <string name="crash_logs_last_crash_type">Type: %1$s</string>
+    <string name="crash_logs_last_crash_message">Message: %1$s</string>
+    <string name="crash_logs_stacktrace_label">Stack:</string>
+    <string name="crash_logs_empty">No crashes recorded.</string>
+    <string name="crash_logs_create_zip">Create ZIP</string>
+    <string name="crash_logs_clear">Clear</string>
+    <string name="crash_logs_back">Back</string>
+    <string name="crash_logs_zip_ready">ZIP saved: %1$s</string>
+    <string name="crash_logs_zip_unavailable">No logs to export.</string>
+    <string name="crash_logs_cleared">Logs cleared.</string>
+    <string name="crash_logs_operation_failed">Operation failed.</string>
     <string name="catalog_debug_label">Catalog Debug</string>
     <string name="catalog_debug_title">Catalog Debug</string>
-    <string name="catalog_debug_probe_header">Пробный запрос</string>
+    <string name="catalog_debug_probe_header">Probe request</string>
     <string name="catalog_debug_probe_ra">RA (°)</string>
     <string name="catalog_debug_probe_dec">Dec (°)</string>
-    <string name="catalog_debug_probe_radius">Радиус (°)</string>
-    <string name="catalog_debug_probe_mag">Предел звёздн. величины</string>
-    <string name="catalog_debug_probe_action">Найти</string>
-    <string name="catalog_debug_probe_results_title">Результаты</string>
-    <string name="catalog_debug_probe_timestamp">Обновлено: %1$s</string>
+    <string name="catalog_debug_probe_radius">Radius (°)</string>
+    <string name="catalog_debug_probe_mag">Magnitude limit</string>
+    <string name="catalog_debug_probe_action">Search</string>
+    <string name="catalog_debug_probe_results_title">Results</string>
+    <string name="catalog_debug_probe_timestamp">Updated: %1$s</string>
     <string name="catalog_debug_self_test_action">Self-test</string>
-    <string name="catalog_debug_self_test_title">Диагностика</string>
-    <string name="catalog_debug_back">Назад</string>
-    <string name="time_debug_back">Назад</string>
+    <string name="catalog_debug_self_test_title">Diagnostics</string>
+    <string name="catalog_debug_back">Back</string>
+    <string name="time_debug_back">Back</string>
     <string name="astro_debug_label">Astro Debug</string>
     <string name="astro_debug_title">Astro Debug</string>
     <string name="astro_debug_lst_degrees">LST: %1$.2f°</string>
     <string name="astro_debug_lst_unknown">LST: —</string>
-    <string name="astro_debug_lst_time">LST (часы): %1$s</string>
+    <string name="astro_debug_lst_time">LST (HH:MM:SS): %1$s</string>
     <string name="astro_debug_value_unknown">—</string>
     <string name="astro_debug_horizontal">Az/Alt: %1$.1f° / %2$.1f°</string>
     <string name="astro_debug_equatorial">RA/Dec: %1$.1f° / %2$.1f°</string>
-    <string name="astro_debug_best_match_object">Лучшее совпадение: %1$s (m=%2$s, созвездие=%3$s)</string>
-    <string name="astro_debug_best_match_constellation">Созвездие: %1$s</string>
-    <string name="astro_debug_best_match_unknown">Лучшее совпадение: —</string>
-    <string name="astro_debug_best_match_unknown_label">Без имени</string>
+    <string name="astro_debug_best_match_object">Best match: %1$s (m=%2$s, constellation=%3$s)</string>
+    <string name="astro_debug_best_match_constellation">Constellation: %1$s</string>
+    <string name="astro_debug_best_match_unknown">Best match: —</string>
+    <string name="astro_debug_best_match_unknown_label">Unnamed</string>
     <string name="astro_debug_constellation_unknown">—</string>
-    <string name="astro_debug_target_summary">Цель: %1$s</string>
-    <string name="astro_debug_target_sun">Солнце</string>
-    <string name="astro_debug_target_moon">Луна</string>
-    <string name="astro_debug_target_jupiter">Юпитер</string>
-    <string name="astro_debug_target_saturn">Сатурн</string>
+    <string name="astro_debug_target_summary">Target: %1$s</string>
+    <string name="astro_debug_target_sun">Sun</string>
+    <string name="astro_debug_target_moon">Moon</string>
+    <string name="astro_debug_target_jupiter">Jupiter</string>
+    <string name="astro_debug_target_saturn">Saturn</string>
     <string name="astro_debug_aim_error">Δaz=%1$.1f° Δalt=%2$.1f°</string>
     <string name="astro_debug_aim_error_unknown">Δaz/Δalt: —</string>
     <!-- A11y & Haptics (S6.F) -->
@@ -156,11 +157,11 @@
     <string name="tile_debug_last_generation">Last generation: %1$s, %2$s</string>
     <string name="tile_debug_last_generation_unknown">Last generation: —</string>
     <string name="tile_debug_target_unknown">—</string>
-    <string name="onboarding_title">Безопасность</string>
-    <string name="onboarding_description">Point-to-Sky показывает астрономические подсказки, но не заменяет приборы навигации.</string>
-    <string name="onboarding_checkbox">Я понимаю, что приложение не для навигации.</string>
-    <string name="onboarding_location_label">Локация</string>
-    <string name="onboarding_location_granted">Разрешение на локацию уже выдано.</string>
-    <string name="onboarding_location_button">Разрешить локацию во время использования</string>
-    <string name="onboarding_continue">Продолжить</string>
+    <string name="onboarding_title">Safety</string>
+    <string name="onboarding_description">Point-to-Sky provides astronomy guidance only and must not be used for navigation.</string>
+    <string name="onboarding_checkbox">I understand this app is not for navigation.</string>
+    <string name="onboarding_location_label">Location</string>
+    <string name="onboarding_location_granted">Location permission is already granted.</string>
+    <string name="onboarding_location_button">Allow location while in use</string>
+    <string name="onboarding_continue">Continue</string>
 </resources>
