--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="ar_unknown_object">Unknown object</string>
     <string name="ar_show_constellations">Show constellations</string>
     <string name="ar_show_asterisms">Show asterisms</string>
+    <string name="ar_mag_limit_title">Max magnitude: %1$s</string>
     <string name="settings_title">Settings</string>
     <string name="settings_mirror_title">Mirror to phone</string>
     <string name="settings_mirror_desc">Show Tonight tile data on the phone.</string>
